--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Kian Cho
+title: Kian's (essentially small) site
 description: Hello, I am Kian (he/him). I am a category theory enjoyer, a rhythm game enthusiast, a stack of cats in trench coat, or a horrible goose.
 logo: assets/portrait.png
 baseurl: ""
