--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,11 @@ title: Kian Cho
 description: Hello, I am Kian (he/him). I am a category theory enjoyer, a rhythm game enthusiast, a stack of cats in trench coat, or a horrible goose.
 logo: assets/portrait.png
 baseurl: ""
+
+# Site Author
+author:
+  location         : "Pittsburgh, PA"
+  email            : "kianc@andrew.cmu.edu"
+  github           : "toposes"
+  linkedin         : "toposes"
+
