--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ baseurl: ""
 # Site Author
 author:
   location         : "Pittsburgh, PA"
-  email            : "kianc@andrew.cmu.edu"
+  email            : "kianc [at] andrew.cmu.edu"
   github           : "toposes"
   linkedin         : "toposes"
 
