--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,7 @@ title: Kian Cho
 description: Hello, I am Kian (he/him). I am a category theory enjoyer, a rhythm game enthusiast, a stack of cats in trench coat, or a horrible goose.
 logo: assets/portrait.png
 baseurl: ""
+collections:
+  pages:
+    output: true
 
